--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -15,7 +15,7 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
 
 /* ===============================  text styles ================================ */
-body, textarea, input {font:12px/1.6 'droid sans', Arial,'Liberation Sans',FreeSans,sans-serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:13px}
+body, textarea, input {font:12px/1.6 font-family: Georgia, 'Times New Roman', Times, serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:13px}
 
 /* ======================  CSS3 regularly used stuff ================== */
 
@@ -36,7 +36,7 @@ body span.cal_sheet span.month {
 
 h1, h2, h3, h4, h5, h6, #nav, #subnav, #user_links .button, .bring_quote, .cycle_nav a, .call_to_action, #beta_bar {
 
-    font-family: 'Merriweather', arial, serif;
+    font-family: 'Droid Sans', 'Lucida Grande', Helvetica, sans-serif;
 	color:black;
 	font-weight: lighter;
 
@@ -1136,10 +1136,23 @@ h1#page_title {
 	color: #999;
 } 
 #site_logo_link {
-/*	height:95px;
-	margin:15px 0 0 20px;
-	width: 160px;*/
 	
+	font-family: 'Pacifico', serif;
+	display: block;
+	font-size: 45px;
+	color: black;
+	text-indent: -9000em;
+	width: 445px;
+	float: left;
+	height: 90px;
+	background: url(/images/small_logo.png) no-repeat;
+	text-decoration: none;
+	margin:10px 0 0;
+
+}
+
+#home_site_logo_link {
+  background: url(/images/logo.png) no-repeat;
 	font-family: 'Pacifico', serif;
 	display: block;
 	font-size: 45px;
@@ -1151,7 +1164,10 @@ h1#page_title {
 	background: url(/images/logo.png) no-repeat;
 	text-decoration: none;
 	margin:25px 0 25px 0;
+}
 
+#user_links {
+  padding:10px 0;
 }
 
 #user_links p {
@@ -1625,6 +1641,38 @@ a#facebook_link {
 p.latest_text {
 	color: #888;
 	
+}
+
+#activity_grid {
+  float:left;
+  margin-bottom:20px;
+}
+#activity_grid .activity {
+  padding:15px;
+  margin:0 15px 15px 0;
+  background:#ddd;
+  float:left;
+  clear:none;
+  color:#000;
+  
+  border: 1px solid #DDD;
+  text-align: center;
+  background-color: #F3F3F3;
+  text-shadow: white 0 1px 0;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+#activity_grid .activity img {
+  float:left;
+  margin-bottom:10px;
+}
+#activity_grid .activity .label{
+  float:left;
+  clear:both;
+  color:#000;
+  text-align:center; 
+  width:100%;
 }
 
 /* ====================  Inside pages  ===================== */
