Added map of time_slots to activities#show.

--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -2,10 +2,26 @@
 -hidden_title @activity
 
 .row
-  .eightcol
-    %h1=@activity
-    =simple_format(@activity.description)  
-  .fourcol.last
+  .fourcol
     =image_for(@activity, "300x")
+  .eightcol.last
+    %h1=@activity
+    =read_more_truncate(@activity.description, :length => 1200)
+#activity_search_row.row
+  .fourcol
+    %h4 1. Type your postcode
+    -form_for @search do |form|
+      =text_field_tag :postcode, params[:postcode], :class => "labelify", :title => "e.g. SW1 2BJ"
+  .fourcol.last
+    %h4 2. Click on your preferred time
+    #preferred_times
+      -%w{morning	lunch	afternoon evening weekend anytime}.each do |time_name|
+        =link_to_function(time_name)
+#activity_search_results.row
+  .twelvecol
+    %p
+      =full_pluralize("Results: There are", @activity.time_slots.count(:select => "DISTINCT organisation_id"), "organisation")
+      you can help
+    =google_map(@activity.time_slots.group_by_organisation, :width => "100%", :height => 500, :version => "3.5", :infoboxes => true)
 .row
   =options_panel(@activity)
