--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -14,7 +14,7 @@
 -no_content_row 
 .row
   .twelvecol
-    #activity_grid
+    .activity_grid
       -Activity.all.each do |activity|
         -link_to(activity, :class => "activity") do
           =image_for(activity, "180x180#")
