--- a/client/app/views/organisations/show.html.haml
+++ b/client/app/views/organisations/show.html.haml
@@ -2,11 +2,28 @@
 -hidden_title @organisation
 
 .row
-  .eightcol
+  .twocol
+    =image_for(@organisation, "180x") if @organisation.has_image?
+  .tencol.last
     %h1=@organisation
-    =simple_format(@organisation.description)  
-  .fourcol.last
-    =image_for(@organisation, "300x") if @organisation.has_image?
+    =simple_format(@organisation.description) 
+.row
+  .twocol
+  .tencol.last
+    %hr
+    %h4 Where?
+    =render_address(@organisation.location) unless @organisation.location.unknown?
+    =google_map(@organisation, :width => "100%", :height => 350, :zoom => 7, :infoboxes => true) if @organisation.has_lat_lng?
+.row
+  .twocol
+  .tencol.last
+    %hr
+    %h4 What can you do to help out?
+    .activity_grid.small_activity_grid
+      -@organisation.activities.each do |activity|
+        -link_to(organisation_activity_path(@organisation,activity), :class => "activity") do
+          =image_for(activity, "147x147#")
+          .label=activity
 .row
   -options_panel do
     =back_link
