--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -2,9 +2,9 @@
 -hidden_title @activity
 
 .row
-  .fourcol
+  .threecol 
     =image_for(@activity, "300x")
-  .eightcol.last
+  .ninecol.last
     %h1=@activity
     -if @organisation
       %span 
@@ -15,18 +15,35 @@
     =read_more_truncate(@activity.description, :length => 1200)
 -if @organisation
   .row
-    .twelvecol
-      %h4 When can you help out?
+    .threecol
+    .ninecol.last
       %hr
-  -TimeSlot::DAYS.each do |day|
-    -time_slots = @activity.time_slots.organisation_id_is(@organisation.id).ascend_by_starts_at.select{|ts| ts.send("#{day.to_s}?")}
+      %h4 When can you help out?
+      %table.time_slots
+        %tbody
+          -TimeSlot::DAYS.each do |day|
+            -time_slots = @activity.time_slots.organisation_id_is(@organisation.id).ascend_by_starts_at.select{|ts| ts.send("#{day.to_s}?")}
+            -time_slots.each_with_index do |time_slot, idx|
+              %tr
+                -if idx.zero?
+                  %td{:rowspan => time_slots.size}
+                    %strong=day_name(day) 
+                %td=time_slot.timespan
+                %td.note
+                  %em=time_slot.note
+                %td.link
+                  =link_to("Book a date", time_slot)
+  -unless @other_activities.blank?
     .row
-      .twocol
-        %h6=day_name(day)
-      .tencol.last
-        -time_slots.each do |time_slot|
-          =time_slot.note
-          =time_slot.timespan
+      .threecol
+      .ninecol.last
+        %hr
+        %h4 Other things you can do here
+        .activity_grid.small_activity_grid
+          -@other_activities.each do |activity|
+            -link_to(organisation_activity_path(@organisation,activity), :class => "activity") do
+              =image_for(activity, "147x147#")
+              .label=activity
 -else
   #activity_search_row.row
     .fourcol
