--- a/client/app/views/time_slots/index.html.haml
+++ b/client/app/views/time_slots/index.html.haml
@@ -20,7 +20,7 @@
           =render("time_slots/time_slot", :time_slot => time_slot)
       =link_to_function("Add a new time slot", "$(this).next().show();$(this).hide()",:class => "new_time_slot_link")
       .new_time_slot_form{:style => "display:none"}
-        =render("time_slots/form", :time_slot => activity.time_slots.build(:organisation => @organisation))
+        =render("time_slots/form", :time_slot => activity.time_slots.build(:organisation => @organisation), :disabled => false)
 
 
 .row
