--- a/client/app/views/time_slots/_time_slot.html.haml
+++ b/client/app/views/time_slots/_time_slot.html.haml
@@ -1,3 +1,3 @@
 %li.time_slot_form{:id => "activity_#{time_slot.activity_id}_time_slot_#{time_slot.id}"}
-  =render("time_slots/form", :time_slot => time_slot)
+  =render("time_slots/form", :time_slot => time_slot, :disabled => true)
   
