--- a/client/app/views/time_slots/_form.html.haml
+++ b/client/app/views/time_slots/_form.html.haml
@@ -9,12 +9,15 @@
     =form.input :ends_at_string, :as => :select, :label => "To", :collection => (0..23).map{|h| "%02d:00" % h}, :include_blank => false, :wrapper_html => {:id => "#{unique_id}_ends_at_string_input"}, :input_html => {:id => "#{unique_id}_ends_at_string", :disabled => disabled}
     -if !time_slot.errors.on_base.blank?
       %li.time_slot_errors=time_slot.errors.on_base
+    -if time_slot.errors.on(:starts_at) || time_slot.errors.on(:ends_at)
+      %li.time_slot_errors End time must be after the start time
     %li.note
-      %p=time_slot.note
+      %p
+        %em=time_slot.note
     =form.input :note, :label => false, :wrapper_html => {:id => "#{unique_id}_note_input", :class => "note_input"}, :input_html => {:id => "#{unique_id}_note", :class => "labelify", :title => "Add a note here...", :rows => 1, :cols => 68}
   -form.buttons do
     =form.commit_button "Save", :button_html => {:id => "#{unique_id}_submit"}
     -if disabled && !time_slot.new_record?
       =link_to_function("Edit", "TimeSlot.toggleEdit('#{"activity_#{time_slot.activity_id}_time_slot_form_#{time_slot.id}"}')", :class => "edit_link")
-      =link_to_remote("Delete", :url => time_slot_path(time_slot), :method => :delete, :html => {:class => "delete_link"})
+      =link_to_remote("Delete", :url => time_slot_path(time_slot), :method => :delete, :html => {:class => "delete_link"}, :confirm => "Are you sure?")
       
