List organisations time_slot_bookings. My organisations link in Nav.

--- a/client/app/views/layouts/_header.html.haml
+++ b/client/app/views/layouts/_header.html.haml
@@ -11,20 +11,25 @@
     -if logged_in?
       .panel
         .logged_in_as
-          =link_to(@logged_in_member, "#", :class=>'logged_in_member_link')
+          =link_to(@logged_in_member, "#", :class => 'logged_in_member_link logged_in_as_link')
+          =link_if_allowed('Admin', admin_proc, :class => "logged_in_as_link")
+          =link_to("My organisations", "#", :class => 'my_organisations_link logged_in_as_link') if !logged_in_member.organisations.empty?
           =#link_to "Notifications#{current_page?(notifications_path) || @logged_in_member.notifications.unread.empty? ? "" : " <span>#{@logged_in_member.notifications.unread.count}</span>"}", notifications_path, :class => "notifications", :title => "#{pluralize(@logged_in_member.notifications.unread.count, 'new notification')}"
           =#link_to "Inbox#{current_page?(messages_path) || !@logged_in_member.has_unread_messages? ? "" : " <span>#{@logged_in_member.unread_message_count}</span>"}", messages_path, :class => "messages", :title => "#{pluralize(@logged_in_member.unread_message_count, 'new messages')}"
           =#link_to('My profile', @logged_in_member, :class=>'profile_link')
-          =link_if_allowed('Admin', admin_proc)
+          .logged_in_box
+            -link_to @logged_in_member, :class => 'my_profile_link' do
+              =image_for @logged_in_member, '50x50#'
+              %p My profile
+            =link_to("Account settings", edit_member_path(logged_in_member))
+            =link_to('Logout', session_path, :method => :delete)
+          -if !logged_in_member.organisations.empty?
+            .my_organisations_box
+              -logged_in_member.organisations.each do |organisation|
+                -link_to(organisation, :class => "my_profile_link") do
+                  =image_for(organisation, "50x50#")
+                  %p=organisation
           
     -else
       =link_to "Login", "#login_popup", :id=>'login_link', :class=>"button"
       =link_to("Signup", new_member_path, :class => 'button')
-
-    -if logged_in?
-      .logged_in_box
-        -link_to @logged_in_member, :class=>'my_profile_link' do
-          =image_for @logged_in_member, '50x50#'
-          %p My profile
-        =link_if_allowed "Account settings", edit_member_proc(@logged_in_member)
-        =link_to('Logout', session_path, :method => :delete)
