--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -60,9 +60,10 @@
           =link_to_function(time_name)
   #activity_search_results.row
     .twelvecol
-      %p
-        =full_pluralize("Results: There are", @activity.time_slots.count(:select => "DISTINCT organisation_id"), "organisation")
-        you can help
+      -if false
+        %p
+          =full_pluralize("Results: There are", @activity.time_slots.count(:select => "DISTINCT organisation_id"), "organisation")
+          you can help
       =google_map(@activity.time_slots.group_by_organisation, :width => "100%", :height => 500, :version => "3.5", :infoboxes => true)
 .row
   =options_panel(@activity)
