--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -19,20 +19,7 @@
     .ninecol.last
       %hr
       %h4 When can you help out?
-      %table.time_slots
-        %tbody
-          -TimeSlot::DAYS.each do |day|
-            -time_slots = @activity.time_slots.organisation_id_is(@organisation.id).ascend_by_starts_at.select{|ts| ts.send("#{day.to_s}?")}
-            -time_slots.each_with_index do |time_slot, idx|
-              %tr
-                -if idx.zero?
-                  %td{:rowspan => time_slots.size}
-                    %strong=day_name(day) 
-                %td=time_slot.timespan
-                %td.note
-                  %em=time_slot.note
-                %td.link
-                  =link_to("Book a date", time_slot)
+      =render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at)
   -unless @other_activities.blank?
     .row
       .threecol
@@ -46,24 +33,19 @@
               .label=activity
 -else
   #activity_search_row.row
-    .fourcol
-      %h4 1. Type your postcode
+    .fourcol.last
+      %h4 Find somewhere to do this activity
       =text_field_tag :postcode, params[:postcode], :class => "labelify fl", :title => "e.g. SW1 2BJ"
       =link_to_function("Go", "ActivityMap.findPostCode()", :class => "bttn_l")
       %br.clear
       or
       =link_to_function("Find me automatically", "ActivityMap.findMe()")
-    .fourcol.last
-      %h4 2. Click on your preferred time
-      #preferred_times
-        -%w{morning	lunch	afternoon evening weekend anytime}.each do |time_name|
-          =link_to_function(time_name)
   #activity_search_results.row
-    .twelvecol
-      -if false
-        %p
-          =full_pluralize("Results: There are", @activity.time_slots.count(:select => "DISTINCT organisation_id"), "organisation")
-          you can help
-      =google_map(@activity.time_slots.group_by_organisation, :width => "100%", :height => 500, :version => "3.5", :infoboxes => true)
+    .fourcol
+      =google_map(@activity.time_slots.group_by_organisation.collect(&:organisation), :width => "100%", :height => 300, :version => "3.5", :marker_options => {:click => true}, :auto_bounds => true)
+    .eightcol.last
+      #organisation_panel
+        No results here
+        
 .row
   =options_panel(@activity)
