Redirect to big_print after organisation signup.

--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -11,7 +11,8 @@
         prev: '.cycle_prev'
       });
     });
--no_content_row 
+-no_content_row
+-hidden_title "Spots of Time"
 .row
   .twelvecol
     .activity_grid
