--- a/client/app/views/layouts/_nav.html.haml
+++ b/client/app/views/layouts/_nav.html.haml
@@ -10,3 +10,4 @@
       =link_to "Blog", "/"
     %li#nav_link_5
       =link_to "Contact us", "/"
+    =li_with_active_slug(:organisations, link_to_slug("Organisation signup", :organisations), :id => "nav_organisations")
