--- a/client/app/views/members/agree_to_big_print.html.haml
+++ b/client/app/views/members/agree_to_big_print.html.haml
@@ -1,4 +1,4 @@
--title "You are now signed up"
+-title "Welcome to Spots of Time"
 
 %p
   ="You are now signed up with the organisation #{link_to_self(@member.organisations.first.name)}."
